feat(dashboard): Overhaul dashboard with 'Today's Focus' UI and backend logic
Revamped the DashboardPage to provide a more actionable and personalized user experience with a 'Today's Focus' concept.

- Replaced generic widgets with three focused cards: 'Today's Focus Tasks', 'Habits to Complete', and 'Current Balance'.
- Implemented a dynamic greeting that changes based on the time of day (e.g., 'Good morning').
- Updated the data fetching logic to include habits and streamlined the UI to reflect the new card-based layout.

- Enhanced the Habit API to support the new UI by adding a calculated 'completedToday' boolean field to the HabitResponseDTO.
- Implemented the calculation logic within HabitMapper using @AfterMapping for efficiency.
- Optimized the database query in HabitRepository with @EntityGraph to eagerly fetch habit completions, preventing N+1 issues and ensuring data availability for the mapper.
- Refactored HabitDTO to HabitResponseDTO for better naming consistency across the application.